<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFF2F6FC">

    <ImageView
            android:id="@+id/te_menu_layout_title_img"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="fitXY"
            android:src="@mipmap/te_beauty_menu_layout_tile_bg"
            app:layout_constraintDimensionRatio="750:664"
            app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
            android:id="@+id/te_menu_activity_title_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        <ImageView
                android:id="@+id/te_menu_tile_icon"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:src="@mipmap/te_beauty_menu_layout_title_icon"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        <TextView
                android:id="@+id/te_menu_title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/te_beauty_launch_page_title"
                android:textColor="#FF333333"
                android:textSize="20sp"
                android:textStyle="bold" />

    </LinearLayout>

    <TextView
            android:id="@+id/te_menu_loading_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#99000000"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/te_beauty_copying_tip"
            android:textColor="#FFFFFFFF"
            android:textSize="18sp"
            android:visibility="gone" />

    <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView
                android:id="@+id/tv_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#AAAAAA"
                android:textSize="20sp" />

        <Button
                android:id="@+id/btn_download_library"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beauty_download_library"
                android:textAllCaps="false" />

        <Button
                android:id="@+id/btn_download_models"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beauty_download_models"
                android:enabled="false"
                android:textAllCaps="false" />

        <Button
                android:id="@+id/btn_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beauty_auth"
                android:enabled="false"
                android:textAllCaps="false" />

        <Button
                android:id="@+id/btn_start_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/beauty_start_camera"
                android:enabled="false"
                android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>